<resources>
    <string name="app_name">Scheda personaggio 5e</string>
    <string name="nome_personaggio">Come si chiama il tuo personaggio?</string>
    <string name="indietro">INDIETRO</string>
    <string name="avanti">AVANTI</string>
    <string name="scegli">Scegli</string>
    <string name="otterai">Otterai le seguenti competenze:</string>
    <string name="personaggi">Personaggi</string>
    <string name="campagne">Campagne</string>
    <string name="titolo">Campagne D&amp;D 5e</string>
    <string name="accedi">Accedi</string>
    <string name="benvenuto">Benvenuto in Scheda D&amp;D 5e!</string>
    <string name="accedi_o_registrati">Accedi o registrati per procedere</string>
    <string name="non_registrato">Non sei registrato? Clicca qui</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrati">Registrati</string>
    <string name="messaggio_registrati">Benvenuto! Registrati per procedere</string>
    <string name="registrato">Già registrato? Accedi</string>
    <string name="username">Username</string>
    <string name="conferma_passw">Conferma password</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="pass_dimenticata">Password dimenticata?</string>
    <string name="reset">Inserisci la mail per effettuare il reset</string>
    <string name="reset_button">Reset Password</string>
    <string name="info">Info</string>
    <string name="aiuto">Aiuto</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profilo">Profilo</string>
    <string name="supporto">Supporto</string>
    <string name="pass_dimenticata_caps">PASSWORD \nDIMENTICATA</string>
    <string name="info_contatti">Info e Contatti</string>
    <string name="aggiungi_personaggio">Aggiungi personaggio</string>
    <string name="crea">Crea</string>
    <string name="unisciti">Unisciti</string>
    <string name="logout_msg">Sei sicuro di voler effettuare il logout? Dovrai reinserire le tue credenziali per utilizzare di nuovo l\'app</string>
    <string name="inserisci_nome_e_password">Inserisci nome e password</string>
    <string name="nome_campagna">Nome Campagna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inserisci_il_nome_della_campagna">Inserisci il nome della campagna:</string>
    <string name="inserisci_la_password">Inserisci la password:</string>
    <string name="nome_personaggio_lista">Nome: </string>
    <string name="classe_personaggio_lista">Classe: </string>
    <string name="razza_personaggio_lista">Razza: </string>
    <string name="scegli_la_razza">Scegli la razza</string>
    <string name="scegli_la_sottorazza">Scegli la sottorazza</string>
    <string name="umano">Umano</string>
    <string name="elfo">Elfo</string>
    <string name="elfo_alto">Elfo alto</string>
    <string name="elfo_dei_boschi">Elfo dei boschi</string>
    <string name="elfo_oscuro">Elfo\n oscuro</string>
    <string name="nano">Nano</string>
    <string name="nano_delle_colline">Nano delle colline</string>
    <string name="nano_delle_montagne">Nano delle montagne</string>
    <string name="scelto">scelto</string>
    <string name="scegli_classe">Scegli una classe</string>
    <string name="bardo">Bardo</string>
    <string name="guerriero">Guerriero</string>
    <string name="paladino">Paladino</string>
    <string name="ladro">Ladro</string>
    <string name="mago">Mago</string>
    <string name="chierico">Chierico</string>
    <string name="background_title">BACKGROUND</string>
    <string name="background">
Ogni storia ha un inizio.\nLa storia del tuo personaggio rivela da dove provieni, come sei diventato un avventuriero, e il tuo posto nel mondo.\nIl tuo guerriero può essere stato un coraggioso cavaliere o un vecchio soldato.\nIl tuo mago può essere stato un saggio o un artigiano.\nIl tuo ladro potrebbe essersi guadagnato da vivere lavorando per una gilda o intrattenendo il pubblico come un giullare.
</string>
    <string name="descrizione">Descrizione fisica:</string>
    <string name="scegli_le_abilità">Abilità scelte:</string>
    <string name="competenze">Competenze</string>
    <string name="linguaggi_2">2 linguaggi</string>
    <string name="strumenti_2">2 strumenti</string>
    <string name="strumenti_1_linguaggi_1">1 linguaggio, 1 strumento</string>
    <string name="scegli_strumenti">Strumenti scelti:</string>
    <string name="scegli_linguaggi">Linguaggi scelti:</string>
    <string name="tratti_caratteriali">Tratti caratteriali:</string>
    <string name="difetti">Difetti:</string>
    <string name="ideali">Ideali:</string>
    <string name="legami">Legami:</string>
    <string name="abilità">Abilità</string>
    <string name="dado">Dado</string>
    <string name="totale">Totale</string>
    <string name="razza">Razza</string>
    <string name="total">Total</string>
    <string name="forza_title">FORZA</string>
    <string name="forza">
La Forza misura la potenza del proprio corpo, l\'addestramento fisico e l\'efficaciacon cui un personaggio è in grado di esercitare la propria potenza fisica.\nUna prova di forza può rappresentareogni tentativo di sollevare, spingere, tirareo spezzare qualcosa,di farsi strada atraverso uno spazio, o di applicare in altri modi la forza bruta a una situazione.\nL\'abilità atletica rappresenta una maggiore prestanza in certi tipi di prove di forza.
    </string>
    <string name="destrezza_title">DESTREZZA</string>
    <string name="destrezza">
La Destrezza misura l\'agilità, i riflessi e l\'equilibrio.\nUna prova di destrezza può rappresentar ogni tentativo di muoversi agilmente, rapidamente o silenziosamente, o di evitare di cadere quando ci si muove su una superficie precaria.\nLe abilità acrobazia, furtività e rapidità di mano rappresentano una maggiore bravura in certi tipi di prove di destrezza.
    </string>
    <string name="costituzione_title">COSTITUZIONE</string>
    <string name="costituzione">
La Costituzione misura la salute, la resistenza fisica e l\'energia vitale del personaggio.\nLe prove di costituzione sono rare: nessuna abilità viene applicata alle prove di costituzione, in quanto la resistenza fisica rappresenta da questa caratteristica è principalmente una dote passiva e non richiede uno sforzo specifico da parte di un personaggio o di un mostro.\nUna prova di costituzione può tuttavia rappresentare il tentativo di un personaggio di spingersi oltre i propri limiti.
    </string>
    <string name="intelligenza_title">INTELLIGENZA</string>
    <string name="intelligenza">
L\'Intelligenza misura l\'acume mentale, la precisione della memoria e le capacità logiche.\nUna prova di Intelligenza entra in gioco quando un personaggio ricorre alla logica, all\'istruzione, alla memoria o al ragionamento deduttivo.\nLe abilità arcano, indagare, natura, religione e storia rappresentano una preparazione superiore in certi tipi di prove di intelligenza.
    </string>
    <string name="saggezza_title">SAGGEZZA</string>
    <string name="saggezza">
La Saggezza rappresenta la percezione, l\'intuizione e il grado di sintonia del personaggio con il mondo circostante.\nUna prova di saggezza rappresenta un tentativo di interpretare il linguaggio corporeo o le emozioni di qualcuno, notare qualcosa nell\'ambiente o prendersi cura di una persona ferita.\nLe abilità addestrare animali, intuizione, medicina, percezione e sopravvivenza rappresentano una maggiore sensibilità in certi tipi di prove di saggezza.
    </string>
    <string name="carisma_title">CARISMA</string>
    <string name="carisma">
Il Carisma misura la capacità del personaggio di interagire con successo con gli altri.\nInclude fattori come la sua sicurezza e la sua eloquenza e può rappresentare una personalità accattivante o imperiosa.\nUn personaggio può effettuare una prova di carisma quando cerca di influenzare o di intrattenere gli altri, quando tenta di impressionare qualcuno o di raccontare una bugia convincente, o quando deve destreggiarsi in una situazione sociale spinosa.\nLe abilità Inganno, Intimidire, Intrattenere e Persuasione rappresentano una maggiore disinvoltura in certi tipi di prove di Carisma.
    </string>
    <string name="partecipa">Partecipa</string>
    <string name="crea_personaggio">Crea Personaggio</string>
    <string name="nome_npc">Nome NPC</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="eliminazione_campagna">ATTENZIONE!!!\n \n Stai per eliminare dei dati che potrebbero non essere più recuperabili\n Vuoi continuare?</string>
    <string name="numeroCompetenze">Scegli %d tra le seguenti competenze:</string>
    <string name="statistiche_personaggio">Statistiche personaggio</string>
    <string name="_3_d6">3 D6</string>
    <string name="allineamento">Allineamento:</string>
    <string name="storia">Storia:</string>
    <string name="calcola_totali">Calcola totali</string>
    <string name="scegli_il_tuo_equipaggiamento">Scegli il tuo equipaggiamento</string>
    <string name="sei_sicuro_di_creare_questo_personaggio">Sei sicuro di creare questo personaggio?</string>
    <string name="puoi_sempre_modificarlo_in_seguito">Puoi sempre modificarlo in seguito...</string>
    <string name="nome_master">Nome Master</string>
    <string name="inserisci_un_personaggio">Inserisci un personaggio:</string>
    <string name="campagne_in_corso">Campagne in corso:</string>
    <string name="email_utente">Email Utente:</string>
    <string name="personaggi_creati">Personaggi creati:</string>
    <string name="classe_e_razza_preferite">Classe e razza preferite:</string>
    <string-array name="allineamento_spinner">
        <item>-</item>
        <item>Legale buono</item>
        <item>Neutrale buono</item>
        <item>Caotico buono</item>
        <item>Legale neutrale</item>
        <item>Neutrale puro</item>
        <item>Caotico neutrale</item>
        <item>Legale malvagio</item>
        <item>Neutrale malvagio</item>
        <item>Caotico malvagio</item>
    </string-array>
    <string-array name="scelta_bardo_1">
        <item>-</item>
        <item>Uno stocco</item>
        <item>Una spada lunga</item>
        <item>Ascia</item>
        <item>Bastone ferrato</item>
        <item>Falcetto</item>
        <item>Giavellotto</item>
        <item>Lancia</item>
        <item>Martello leggero</item>
        <item>Mazza</item>
        <item>Pugnale</item>
        <item>Randello</item>
        <item>Randello pesante</item>
        <item>Arco corto</item>
        <item>Balestra</item>
        <item>Dardo</item>
        <item>Fionda</item>
    </string-array>
    <string-array name="scelta_bardo_2">
        <item>-</item>
        <item>Ciaramella</item>
        <item>Cornamusa</item>
        <item>Corno</item>
        <item>Dulcimer</item>
        <item>Flauto</item>
        <item>Flauto di Pan</item>
        <item>Lira</item>
        <item>Liuto</item>
        <item>Tamburo</item>
        <item>Viola</item>
    </string-array>
    <string-array name="scelta_bardo_3">
        <item>Un\'armatura di cuoio e un pugnale</item>
    </string-array>
    <string-array name="scelta_bardo_4">
        <item>-</item>
        <item>Una dotazione da diplomatico</item>
        <item>Una dotazione da esploratore</item>
    </string-array>
    <string-array name="scelta_guerriero_1">
        <item>-</item>
        <item>Una cotta di maglia</item>
        <item>Un\'armatura di cuoio, un arco lungo e 20 frecce</item>
    </string-array>
    <string name="oggetto">Oggetto:</string>
    <string name="scegli_un_personaggio">Scegli un personaggio</string>
    <string name="classe">Classe</string>
    <string name="sottoclasse">Sottoclasse</string>
    <string name="incantesimi">Incantesimi</string>
    <string name="strumenti">Strumenti</string>
</resources>