<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/home"
            android:onClick="openMainActivity"/>
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/user"
            android:title="@string/profilo"/>
        <item
            android:id="@+id/logoutFragment"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>

    <item android:title="@string/strumenti">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dadoFragment2"
                    android:icon="@drawable/dado"
                    android:title="@string/dado"/>
                <item
                    android:id="@+id/listaMagieFragment"
                    android:icon="@drawable/libro_aperto"
                    android:title="@string/incantesimi"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/supporto">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/infoFragment"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="@string/info_contatti" />
            </group>
        </menu>
    </item>

</menu>