<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".view.characters.visualizza.StatsClasseRazzaFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/info"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/razza"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bottoneInfoRazza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:backgroundTint="@color/rosso"
        android:text="@string/info"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/classe"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bottoneInfoClasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:backgroundTint="@color/rosso"
        android:text="@string/info"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sottoclasse"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/bottoneInfoSottoClasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:backgroundTint="@color/rosso"
        android:text="@string/info"/>

</LinearLayout>